--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/styles.scss",
+              "src/styles/colors.scss"
             ],
             "scripts": []
           },
@@ -93,7 +94,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/styles.scss",
+              "src/styles/colors.scss"
             ],
             "scripts": []
           }
