--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "chart.js": "^4.4.8",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.10",
+    "prismjs": "^1.30.0",
     "rxjs": "~7.8.0",
+    "ts-dedent": "^2.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
