--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.0",
     "@primeng/themes": "^19.0.10",
     "chart.js": "^4.4.8",
+    "chartjs-plugin-zoom": "^2.2.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.10",
     "prismjs": "^1.30.0",
